--- a/.github/workflows/sam_python.yml
+++ b/.github/workflows/sam_python.yml
@@ -26,5 +26,5 @@ jobs:
 
     - name: Deploy SAM application
       if: github.ref == 'refs/heads/main'
-      run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name 2018 --capabilities CAPABILITY_IAM --resolve-s3
+      run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name Kandidat2018 --capabilities CAPABILITY_IAM --resolve-s3
       working-directory: ./kjell
