--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -11,9 +11,10 @@ Globals:
 Resources:
 
   Bucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: "Kandidat2018"
+    ImageS3Bucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: "Kandidat2018"
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -21,6 +22,9 @@ Resources:
       CodeUri: hello_world/
       Handler: app.lambda_handler
       Runtime: python3.9
+      Enviroment:
+        Variables:
+          BucketName: !Ref ImageS3Bucket
       Architectures:
         - x86_64
       Policies:
