--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -1,4 +1,4 @@
-name: Build and Publish ECR to ECR
+name: Build and Publish to ECR
 
 on:
   push:
@@ -13,14 +13,14 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Configure Credentials
+    - name: Set up AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-1
-        
-        - name: Build and Push Docker Image
+
+    - name: Build and Push Docker Image
       if: github.ref == 'refs/heads/main'
       env:
         ECR_REPO_URI: kandidat2028
