--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -20,16 +20,19 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-1
 
+    - name: Log in to ECR
+       id: login-ecr
+       uses: aws-actions/amazon-ecr-login@v1
+      
     - name: Build and Push Docker Image
       if: github.ref == 'refs/heads/main'
       env:
-        ECR_REPO_URI: kandidat2028
+        ECR_REPO_URI: ${{ secrets.ECR_REPO_URI }}
         COMMIT_HASH: $(git rev-parse --short HEAD)
       run: |
         echo $ECR_REPO_URI
         echo $COMMIT_HASH
         docker build -t $ECR_REPO_URI:$COMMIT_HASH .
         docker tag $ECR_REPO_URI:$COMMIT_HASH $ECR_REPO_URI:latest
-        echo ${{ secrets.AWS_SECRET_ACCESS_KEY }} | docker login -u AWS --password-stdin $ECR_REPO_URI
         docker push $ECR_REPO_URI:$COMMIT_HASH
         docker push $ECR_REPO_URI:latest
