--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -24,15 +24,14 @@ jobs:
        id: login-ecr
        uses: aws-actions/amazon-ecr-login@v1
       
-    - name: Build and Push Docker Image
+    - name: Build, and push docker image
       if: github.ref == 'refs/heads/main'
       env:
-        ECR_REPO_URI: kandidat2028
-        COMMIT_HASH: $(git rev-parse --short HEAD)
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: kandidat2028
+        IMAGE_TAG: ${{ github.sha }}
       run: |
-        echo $ECR_REPO_URI
-        echo $COMMIT_HASH
-        docker build -t $ECR_REPO_URI:$COMMIT_HASH .
-        docker tag $ECR_REPO_URI:$COMMIT_HASH $ECR_REPO_URI:latest
-        docker push $ECR_REPO_URI:$COMMIT_HASH
-        docker push $ECR_REPO_URI:latest
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
