--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -28,11 +28,38 @@ jobs:
       if: github.ref == 'refs/heads/main'
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: kandidat2028
+        ECR_REPOSITORY: kandidat2018
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        #h
+        
+    terraform-build-and-deploy:
+      runs-on: ubuntu-latest
+      
+      steps:
+       - name: Checkout Repository
+         uses: actions/checkout@v2
+       
+       - name: Setup Terraform
+         uses: hashicorp/setup-terraform@v1
+         
+       - name: Run Terraform
+         working-directory: .infra
+         run: |
+          export TF_VAR_aws_apprunner_role=2018_iam_role
+          export TF_VAR_aws_iam_policy=2018_iam_policy
+          export TF_VAR_aws_ecr_repo=2018_iam_policy
+
+          
+          terraform init
+
+          
+          terraform apply -auto-approve
+        '
+       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: your-aws-region
