--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -51,7 +51,7 @@ jobs:
          run: |
           export TF_VAR_aws_apprunner_role=2018_iam_role
           export TF_VAR_aws_iam_policy=2018_iam_policy
-          export TF_VAR_aws_ecr_repo=2018_iam_policy
+          export TF_VAR_aws_ecr_repo=244530008913.dkr.ecr.eu-west-1.amazonaws.com/kandidat2018:latest
 
           terraform init
 
