--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -37,6 +37,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
         
   terraform-build-and-deploy:
+    needs: [build-and-publish]
     runs-on: ubuntu-latest
       
     steps:
@@ -56,7 +57,7 @@ jobs:
         terraform init
 
         terraform apply -auto-approve
-     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: your-aws-region
+      env:
+       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+       AWS_DEFAULT_REGION: your-aws-region
