--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -14,12 +14,12 @@ Resources:
     ImageS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: "Kandidat2018"
+        BucketName: "kandidat2018"
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      Timeout: 100
+      Timeout: 60
       CodeUri: hello_world/
       Handler: app.lambda_handler
       Runtime: python3.9
