--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -23,7 +23,7 @@ Resources:
       CodeUri: hello_world/
       Handler: app.lambda_handler
       Runtime: python3.9
-      Enviroment:
+      Environment:
         Variables:
           BUCKET_NAME: !Ref ImageS3Bucket
       Architectures:
