--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -57,8 +57,8 @@ jobs:
     - name: Run Terraform
       working-directory: ./infra
       run: |
-        export TF_VAR_service_name=2018terraform
-        export TF_VAR_ecr_repo=244530008913.dkr.ecr.eu-west-1.amazonaws.com/kandidat2018latest
+        export TF_VAR_service_name=apprunner_2018
+        export TF_VAR_ecr_repo=244530008913.dkr.ecr.eu-west-1.amazonaws.com/kandidat2018
         export TF_VAR_aws_apprunner_role=2018_iam_role
         export TF_VAR_aws_iam_policy=2018_iam_policy
         
