--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -12,14 +12,14 @@ Resources:
 
   Bucket:
     ImageS3Bucket:
-      Type: "AWS::S3::Bucket"
+      Type: AWS::S3::Bucket
       Properties:
         BucketName: "kandidat2018"
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      Timeout: 60
+      Timeout: 40
       CodeUri: hello_world/
       Handler: app.lambda_handler
       Runtime: python3.9
