--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -9,12 +9,11 @@ Globals:
     MemorySize: 512
 
 Resources:
-
   Bucket:
     ImageS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: "kandidat2018"
+        BucketName: kandidat2018
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
