--- a/.github/workflows/sam_python.yml
+++ b/.github/workflows/sam_python.yml
@@ -27,6 +27,6 @@ jobs:
 
     - name: Deploy SAM application
       if: github.ref == 'refs/heads/main'
-      run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name kandidat2018 --capabilities CAPABILITY_IAM --resolve-s3
+      run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name kandidat2018b --capabilities CAPABILITY_IAM --resolve-s3
       working-directory: ./kjell
     
