--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -9,11 +9,10 @@ Globals:
     MemorySize: 512
 
 Resources:
-  Bucket:
-    ImageS3Bucket:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: kandidat2018b
+  ImageS3Bucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: kandidat2018
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
