--- a/kjell/template.yaml
+++ b/kjell/template.yaml
@@ -12,7 +12,7 @@ Resources:
   ImageS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: kandidat2018
+      BucketName: kjellsimagebucket
       
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
