--- a/.github/workflows/sam_python.yml
+++ b/.github/workflows/sam_python.yml
@@ -1,7 +1,11 @@
 
-name: Publish Python AWS SAM
+name: Build and Publish AWS SAM
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
 
 jobs:
   deploy:
@@ -26,7 +30,7 @@ jobs:
       working-directory: ./kjell
 
     - name: Deploy SAM application
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name kandidat2018 --capabilities CAPABILITY_IAM --resolve-s3
       working-directory: ./kjell
     
