--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: kandidat2018
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: ${{git rev-parse --short "$GITHUB_SHA"}}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
@@ -61,9 +61,6 @@ jobs:
         export TF_VAR_ecr_repo=244530008913.dkr.ecr.eu-west-1.amazonaws.com/kandidat2018
         export TF_VAR_aws_apprunner_role=2018_iam_role
         export TF_VAR_aws_iam_policy=2018_iam_policy
-        
-        
         terraform init
-
         terraform apply -auto-approve
       
