--- a/.github/workflows/sam_python.yml
+++ b/.github/workflows/sam_python.yml
@@ -30,7 +30,7 @@ jobs:
       working-directory: ./kjell
 
     - name: Deploy SAM application
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/main'
       run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name kandidat2018 --capabilities CAPABILITY_IAM --resolve-s3
       working-directory: ./kjell
     
