--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -31,8 +31,8 @@ jobs:
         ECR_REPOSITORY: kandidat2018
         IMAGE_TAG: $(git rev-parse --short=8 HEAD)
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
         
@@ -61,6 +61,7 @@ jobs:
         export TF_VAR_ecr_repo=244530008913.dkr.ecr.eu-west-1.amazonaws.com/kandidat2018
         export TF_VAR_aws_apprunner_role=2018_iam_role
         export TF_VAR_aws_iam_policy=2018_iam_policy
+        export TF_VAR_dashboard_name=dashbboard_2018
         terraform init
         terraform apply -auto-approve
       
