--- a/.github/workflows/deploy_ecr.yml
+++ b/.github/workflows/deploy_ecr.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: kandidat2018
-        IMAGE_TAG: $(git rev-parse --short=8 HEAD)
+        IMAGE_TAG: $(git rev-parse --short ${{ github.sha }})
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
